--- a/resources/css/table.css
+++ b/resources/css/table.css
@@ -1,5 +1,5 @@
 .table-thead {
-    background-color: #8956c7;
+    background-color: #6fa6da;
     color: #fff;
 }
 .navbar-nav .nav-item .nav-link:hover {
