--- a/resources/css/gradient.css
+++ b/resources/css/gradient.css
@@ -35,3 +35,6 @@
     background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+.bg-color-friday {
+    background: #83a4d4;
+}
