--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,8 @@
 @import './gradient.css';
 @import './table.css';
 @import 'navbar.css';
+@import 'pagination.css';
+@import 'container.css';
 /*@tailwind base;
 @tailwind components;
 @tailwind utilities;*/
