update view contacts.blade.php update view registration.blade.php add new style for button.css

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,7 @@
 @import 'navbar.css';
 @import 'pagination.css';
 @import 'container.css';
+@import 'button.css';
 /*@tailwind base;
 @tailwind components;
 @tailwind utilities;*/
