--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
 @import 'pagination.css';
 @import 'container.css';
 @import 'button.css';
+@import 'custom-select2.css';
 /*@tailwind base;
 @tailwind components;
 @tailwind utilities;*/
