update view index.blade.php show.blade.php. Update MaterialAssetController.php add selected categoryId

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @import 'container.css';
 @import 'button.css';
 @import 'custom-select2.css';
+@import 'fontello.css';
 /*@tailwind base;
 @tailwind components;
 @tailwind utilities;*/
