--- a/resources/css/gradient.css
+++ b/resources/css/gradient.css
@@ -38,3 +38,13 @@
 .bg-color-friday {
     background: #83a4d4;
 }
+
+.bg-color-moonrise {
+    background: #DAE2F8;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #D6A4A4, #DAE2F8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #D6A4A4, #DAE2F8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+}
